--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,13 @@ layout: default
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
+<p class="view">by {{ page.author | default: site.author.name }}</p>
 
-{{content}}
+{{ content }}
+{% include post_nav.html %}
+{% if site.disqus.shortname %}
+  {% include disqus_comments.html %}
+{% endif %}
 
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
