--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,18 @@ layout: default
 <p class="view">by {{ page.author | default: site.author.name }}</p>
 
 {{ content }}
-{% include post_nav.html %}
+<!-- {% include post_nav.html %} -->
+
+<h3>Latest Posts</h3>
+
+<ul>
+  {% for post in site.related_posts limit:5 %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
+
 {% if site.disqus.shortname %}
   {% include disqus_comments.html %}
 {% endif %}
