Add about me page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="{{ site.url }}/cv">My online<strong>CV</strong></a></li>
+          <li><a href="{{ site.url }}/about">Information<strong>About me</strong></a></li>
           <li><a href="{{ site.linkedin_user }}">Me On <strong>Linkedin</strong></a></li>
           <li><a href="{{ site.github_user }}">Qndev On <strong>GitHub</strong></a></li>
         </ul>
