Custom index.md and posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
           <li><a href="{{ site.github_user }}">Qndev On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+        <!-- <h3><a href="{{ site.url }}/courses">Courses</a></h3> -->
       </header>
       <section>
 
