--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %} -->
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
 
         <p class="view"><a href="https://github.com/qndev/qndev.github.io">View the Project on GitHub <small>qndev/qndev.github.io</small></a></p>
 
