New Post: Pointer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
           <li><a href="{{ site.github_user }}">Qndev On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
-        <!-- <h3><a href="{{ site.url }}/courses">Courses</a></h3> -->
+        <!-- <p><a href="{{ site.url }}/notes">My notes</a></p> -->
       </header>
       <section>
 
