change index home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,32 +20,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
-        <!-- {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %} -->
-
-        <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
-
-        <p class="view"><a href="https://github.com/qndev/qndev.github.io">View the Project on GitHub <small>qndev/qndev.github.io</small></a></p>
-
-        <!-- {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %} -->
-
-        <!-- {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %} -->
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.url }}/about">Information<strong>About me</strong></a></li>
-          <li><a href="{{ site.linkedin_user }}">Me On <strong>Linkedin</strong></a></li>
-          <li><a href="{{ site.github_user }}">Qndev On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
-        <!-- <p><a href="{{ site.url }}/notes">My notes</a></p> -->
+        <h1><a href="https://qndev.github.io">Qndev</a></h1>
+        <a href="https://qndev.github.io/about">About me</a> /
+        <a href="https://github.com/qndev">LinkedIn</a> /
+        <a href="https://github.com/qndev">GitHub</a>
+        <img src="{{site.logo | relative_url}}" alt="Logo" />
       </header>
       <section>
 
