--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://qndev.github.io">Qndev</a></h1>
+        <h1><a href="https://qndev.github.io">DINH QUANG NGUYEN</a></h1>
         <a href="https://qndev.github.io/about">About me</a> /
         <a href="https://github.com/qndev">LinkedIn</a> /
         <a href="https://github.com/qndev">GitHub</a>
-        <img src="{{site.logo | relative_url}}" alt="Logo" />
+        <img class="image-profile" src="/assets/img/my-image.jpg" alt="Logo" />
+        <p class="view"><a href="https://github.com/qndev/qndev.github.io">View the Project on GitHub <small>qndev/qndev.github.io</small></a></p>
       </header>
       <section>
 
@@ -32,9 +33,6 @@
 
       </section>
       <footer>
-        <!-- {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %} -->
         <p>This project is maintained by <a href="https://github.com/qndev">qndev</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
