--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -270,3 +270,11 @@ footer {
     color:#444;
   }
 }
+
+.image-profile {
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 77.78%;
+  background-color: white;
+  margin-top: 5px;
+}
