--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <header>
         <h1><a href="https://qndev.github.io">DINH QUANG NGUYEN</a></h1>
         <a href="https://qndev.github.io/about">About me</a> /
-        <a href="https://github.com/qndev">LinkedIn</a> /
+        <a href="https://www.linkedin.com/in/qndev">LinkedIn</a> /
         <a href="https://github.com/qndev">GitHub</a>
         <img class="image-profile" src="/assets/img/my-image.jpg" alt="Logo" />
         <p class="view"><a href="https://github.com/qndev/qndev.github.io">View the Project on GitHub <small>qndev/qndev.github.io</small></a></p>
