--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <header>
         <h1><a href="https://qndev.github.io">Qndev’s blog</a></h1>
         <a href="https://quangnd.keybase.pub/" target="_blank">About me</a>
-        <img class="image-profile" src="/assets/img/my-image.jpg" alt="Logo" />
+        <img class="image-profile" src="/assets/img/logo.jpg" alt="Logo" />
         <p class="view"><a href="https://github.com/qndev/qndev.github.io">View the Project on GitHub <small>qndev/qndev.github.io</small></a></p>
       </header>
       <section>
